kubernetes/tryn-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: tryn-api
  name: tryn-api
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 4000
  selector:
    run: tryn-api
  type: LoadBalancer
