kubernetes/tryn-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tryn-api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: tryn-api-ip
    networking.gke.io/managed-certificates: tryn-api-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: tryn-api
      port:
        number: 80
